<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" style="@style/w_match">
    <include
         layout="@layout/title_toolbar"></include>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:background="@mipmap/sport"></ImageView>
    <RelativeLayout
       style="@style/w_match">
        <TextView
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:id="@+id/time"
          style="@style/w_wrap"
            android:text="Hello World!"
            />
        <com.example.point.view.StepView
            android:id="@+id/step"
            android:layout_width="200dp"
            android:layout_height="200dp"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" />

        <TextView
            android:id="@+id/tv_isSupport"
             style="@style/w_wrap"
            android:layout_marginTop="300dp"
            android:layout_centerHorizontal="true"
            android:text="@string/supports"
            android:textColor="#333333" />
        <TextView
            android:id="@+id/tv_set"
           style="@style/w_wrap"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="350dp"
            android:drawableLeft="@mipmap/home_question_mark"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/plan"
            android:textColor="#333333" />

        <TextView
            android:id="@+id/tv_data"
          style="@style/w_wrap"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="40dp"
            android:layout_marginTop="350dp"
            android:drawableLeft="@mipmap/home_statistical"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/history_step"
            android:textColor="#333333" />

    </RelativeLayout>
</LinearLayout>