<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" style="@style/w_match">
    <com.example.common.view.MyToolBar
        android:id="@+id/physical_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.example.common.view.MyToolBar>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:background="@mipmap/bg_create_group"></ImageView>
    <LinearLayout
       style="@style/w_match_wrap"
        android:layout_marginTop="30px"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/physical_one"
            style="@style/w_match_wrap"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
              style="@style/w_wrap"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/physical"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tv_step_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:background="#ffffff"
                android:gravity="center_vertical|right"
                android:text="7000"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#999999" />

        <LinearLayout
            android:id="@+id/physical_two"
            style="@style/w_match_wrap"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                style="@style/w_wrap"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/remind"
                android:textColor="#000000"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cb_remind"
              style="@style/w_wrap"
                android:background="@drawable/cb_plan_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:textSize="50px" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#999999" />

        <LinearLayout
            android:id="@+id/physical_three"
            style="@style/w_match_wrap"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
               style="@style/w_wrap"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/remind_time"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_remind_time"
               style="@style/w_wrap"
                android:gravity="center_vertical|right"
                android:minWidth="300px"
                android:text="21:00"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <com.example.point.view.AnimationButton
          android:layout_centerHorizontal="true"
             android:layout_marginTop="150dp"
             android:id="@+id/save"
             android:layout_width="200dp"
             android:layout_height="50dp"/>
     </RelativeLayout>

</LinearLayout>